# quake2-game

./: .gitignore  CMakeLists.txt  common.props  debug.props  index.html  params.json  quake2.sln  release.props  x86.props  x86_64.props
baseq2/: CMakeLists.txt  baseq2.props  baseq2.vcxproj  g_local.h  g_main.c
ctf/: CMakeLists.txt  ctf.props  ctf.vcxproj  ctf.vcxproj.filters  g_local.h  g_main.c
game/: CMakeLists.txt  game.props  game.vcxproj  game.vcxproj.filters
rogue/: CMakeLists.txt  g_local.h  g_main.c  g_save.c  game.h  m_flyer.c  m_medic.c  q_shared.h  rogue.props  rogue.vcxproj
xatrix/: CMakeLists.txt  g_cmds.c  g_func.c  g_items.c  g_local.h  g_main.c  g_misc.c  g_monster.c  g_save.c  g_spawn.c  g_target.c  g_trigger.c  g_utils.c  g_weapon.c  game.h  m_brain.c  m_chick.c  m_gladiator.c  m_infantry.c  m_move.c  m_soldier.c  m_supertank.c  p_client.c  p_hud.c  p_view.c  q_shared.h  xatrix.props  xatrix.vcxproj
